--- a/css/main.css
+++ b/css/main.css
@@ -2,15 +2,72 @@
 html {
   box-sizing: border-box;
   font-family: "Crimson Text", serif;
-  font-family: "Crimson Text", sans-serif;
   font-size: 1.125rem;
-  line-height: 1.3;
+  font-style: italic;
+  font-weight: normal;
+  line-height: 1.3em;
   color: #222;
-  padding-left: 1rem;
-  padding-right: 1rem;
-
+  padding-left: .5rem;
+  padding-right: .5rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 *, *::before, *::after {
-  box-sizing: 2px;
+  box-sizing: inherit;
+}
+
+body {
+  margin-top: .01rem;
+  margin-bottom: 1.3rem;
+  border-top: 1em;
+  border-bottom: 1em;
+  border: 2px;
+}
+
+article {
+  font-style: normal;
+  font-size: .9rem;
+  line-height: 1rem;
+}
+
+article header {
+  margin-top: 1.5rem;
+  font-family: "Crimson Text", serif;
+  font-style: italic;
+  color: #222;
+  line-height: .25rem;
+  font-weight: lighter;
+}
+
+article header p {
+  font-style: italic;
+  font-weight: normal;
+}
+
+article h1 {
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: lighter;
+}
+
+article p {
+  font-style: normal;
+  line-height: 1.3em;
+}
+
+blockquote {
+  padding-right: .5rem;
+  color: #555;
+  line-height: 1em;
+  font-size: 1rem;
+}
+
+.quote {
+  font-weight: lighter;
+}
+
+article ol {
+  padding-top: .5rem;
+  padding-bottom: .5rem;
 }
