--- a/css/main.css
+++ b/css/main.css
@@ -18,11 +18,11 @@ html {
 }
 
 body {
-  margin-top: .01rem;
-  margin-bottom: 1.3rem;
+  margin: 0;
   border-top: 1em;
   border-bottom: 1em;
   border: 2px;
+  border-color: #999;
 }
 
 article {
@@ -32,11 +32,10 @@ article {
 }
 
 article header {
-  margin-top: 1.5rem;
   font-family: "Crimson Text", serif;
   font-style: italic;
   color: #222;
-  line-height: .25rem;
+  line-height: .01rem;
   font-weight: lighter;
 }
 
