--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,9 @@
-
 html {
   box-sizing: border-box;
   border: 2px;
-  font-family: "Crimson Text", serif;
   padding-left: 1rem;
   padding-right: 1rem;
-  line-height: 1.3rem;
+  margin: 1.5rem 13rem;
 }
 
 *, *::before, *::after {
@@ -13,16 +11,15 @@ html {
 }
 
 body {
+  line-height: 1.3;
   margin: 0;
-  padding-left: .25rem;
-  padding-right: 1rem;
   max-width: 19rem;
   min-width: 19rem;
-  line-height: 1.31;
+  padding-left: 1rem;
 }
 
 article {
-  border-bottom: 1px solid #999;
+  border-bottom: 2px solid #999;
   padding-bottom: 5px;
 }
 
@@ -37,6 +34,7 @@ h1 + p {
 
 article h1 {
   font-size: 1.5rem;
+  font-family: serif;
   font-weight: normal;
   color: #222;
 }
@@ -47,10 +45,12 @@ article header p {
   font-style: italic;
   font-size: 1em;
   color: #222;
+  font-family: "Crimson Text", serif;
 }
 
 article p {
   color: #222;
+  font-family: "Crimson Text", serif;
   padding-top: 2px;
 }
 
@@ -64,14 +64,13 @@ article ol {
 blockquote {
   color: #555;
   font-size: 1.125rem;
+  font-family: italic;
 }
 
 blockquote p {
   color: #555;
-
 }
 
 .quote {
   font-size: 1rem;
-  color: #999;
 }
